# Sistema-Gerenciamento-Escolar

./: pyproject.toml
migrations/: env.py
migrations/versions/: 62fcf142edd9_second_structure.py  bdc3a3295a4d_first_structure.py
src/: app.py  database.py  models.py  schemas.py
src/routes/: alocacoes_crud.py  alunos_crud.py  disciplinas_crud.py  frequencias_crud.py  notas_crud.py  professores_crud.py  responsaveis_crud.py  turmas_crud.py
